src/main/metadata/objects/External_Picklist__c.object
<CustomObject>
    <description>External values for integration picklists.</description>
    <fields>
        <fullName>External_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for updates by Data Loader only.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used for updates by Data Loader only.</inlineHelpText>
        <label>External Key</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <label>External System</label>
        <picklist>
            <picklistValues>
                <fullName>GSSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOLERANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBAFINANCE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_Picklist_External_Key__c</fullName>
        <formula>Integration_Picklist__r.External_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integration Picklist External Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Picklist__c</fullName>
        <label>Integration Picklist</label>
        <referenceTo>Integration_Picklist__c</referenceTo>
        <relationshipLabel>External Picklists</relationshipLabel>
        <relationshipName>External_Picklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Picklist_Mapping__c</fullName>
        <formula>Integration_Picklist__r.Picklist_Mapping__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picklist Mapping</label>
        <type>Text</type>
    </fields>
    <label>External Picklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Integration_Picklist__c</columns>
        <columns>NAME</columns>
        <columns>External_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_External_Key_Syntax</fullName>
        <active>true</active>
        <description>Check that the syntax of the External Key is correct.</description>
        <errorConditionFormula>NOT(BEGINS(External_Key__c, &apos;EP-&apos;)) || NOT(ISNUMBER( RIGHT(External_Key__c, 6)))</errorConditionFormula>
        <errorMessage>The syntax of the external key must match EP-{000000}.</errorMessage>
    </validationRules>
</CustomObject>